--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,10 @@
     </head>
     <body>
         <div class="dashboard">
-            <div class="datetime">
-                <div class="time">10:55<span> AM</span></div>
+            <div id="acClock" class="datetime">
+                <div class="time">04:00<span> AM</span></div>
                 <hr />
-                <div class="date">June 11 <span>Tue.</span></div>
+                <div class="date">January 1 <span>Wed.</span></div>
             </div>
             <div class="legend">
                 <div class="lastchanceMonth"><span>Leaving this month.</span></div>
@@ -48,17 +48,17 @@
             </div>
         </div>
         <div class="available">
-            <div class="critter">
+            <div class="critter" id="Insect">
                 <h2>Insect</h2>
                 <div class="timebar">
-                    <div class="timeframe morning" id="i_4-8">04:00-08:00</div>
-                    <div class="timeframe day" id="i_8-16">08:00-16:00</div>
-                    <div class="timeframe lateday" id="i_16-17">16:00-17:00</div>
-                    <div class="timeframe earlyevening" id="i_17-19">17:00-19:00</div>
-                    <div class="timeframe evening" id="i_19-22">19:00-22:00</div>
-                    <div class="timeframe night" id="i_22-4">22:00-04:00</div>
+                    <div class="timeframe morning">04:00-08:00</div>
+                    <div class="timeframe day">08:00-16:00</div>
+                    <div class="timeframe lateday">16:00-17:00</div>
+                    <div class="timeframe earlyevening">17:00-19:00</div>
+                    <div class="timeframe evening">19:00-22:00</div>
+                    <div class="timeframe night">22:00-04:00</div>
                 </div>
-                <table id="Insect">
+                <table>
                     <thead>
                         <th>Name</th>
                         <th>Price</th>
@@ -68,13 +68,13 @@
                     <tbody></tbody>
                 </table>
             </div>
-            <div class="critter">
+            <div class="critter" id="Fish">
                 <h2>Fish</h2>
                 <div class="timebar">
-                    <div class="timeframe morning" id="f_4-9">04:00-09:00</div>
-                    <div class="timeframe day" id="f_9-16">09:00-16:00</div>
-                    <div class="timeframe evening" id="f_16-21">16:00-21:00</div>
-                    <div class="timeframe night" id="f_21-4">21:00-04:00</div>
+                    <div class="timeframe morning">04:00-09:00</div>
+                    <div class="timeframe day">09:00-16:00</div>
+                    <div class="timeframe evening">16:00-21:00</div>
+                    <div class="timeframe night">21:00-04:00</div>
                 </div>
                 <table id="Fish">
                     <thead>
