--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Critter Forecast - Lists all currently available critters in Animal Crossing New Horizons!" />
         <meta name="author" content="CatStarwind" />
-        <meta name="theme-color" content="#f4edc1" />
+        <meta name="theme-color" content="#f3ebbd">
 
         <!-- Open Graph -->
         <meta property="og:title" content="Critter Forecast - ACNH" />
@@ -15,12 +15,15 @@
         <meta property="og:image" content="https://critterforecast.com/img/favicon-32x32.png" />
 
         <!-- Icons -->
-        <link rel="shortcut icon" href="/img/favicon.ico" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
+        <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png" />
+        <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png" />        
         <link rel="manifest" href="/site.webmanifest">
-        
+        <link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#f3ebbd">
+        <meta name="msapplication-TileColor" content="#f3ebbd">
+        <meta name="msapplication-TileImage" content="/img/ico/mstile-144x144.png">
+
         <link rel="stylesheet" href="css/style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
         <script src="js/luxon.min.js" defer></script>
