--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     </head>
     <body>
         <div class="dashboard">
-            <div id="acClock" class="datetime">
+            <div id="acClock">
                 <div class="time">04:00<span> AM</span></div>
                 <hr />
                 <div class="date">January 1 <span>Wed.</span></div>
