Lighthouse audit fixes.

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <title>Critter Forecast - ACNH</title>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Critter Forecast - Lists all currently available critters in Animal Crossing New Horizons!" />
         <meta name="author" content="CatStarwind" />
@@ -79,7 +80,7 @@
                     <div class="timeframe evening">16:00-21:00</div>
                     <div class="timeframe night">21:00-04:00</div>
                 </div>
-                <table id="Fish">
+                <table>
                     <thead>
                         <th>Name</th>
                         <th>Price</th>
