Updated OG image.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <meta property="og:description" content="Critter Forecast - Lists all currently available critters in Animal Crossing New Horizons!" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://critterforecast.com" />
-        <meta property="og:image" content="https://critterforecast.com/img/favicon-32x32.png" />
+        <meta property="og:image" content="https://critterforecast.com/img/logo.png" />
 
         <!-- Icons -->
         <link rel="shortcut icon" href="/favicon.ico" />
