--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="available">
             <div class="critter" id="Insect">
-                <h2>Insect</h2>
+                <h2>Insects</h2>
                 <div class="timebar">
                     <div class="timeframe morning">04:00-08:00</div>
                     <div class="timeframe day">08:00-16:00</div>
