--- a/public/index.html
+++ b/public/index.html
@@ -17,15 +17,27 @@
 
         <!-- Icons -->
         <link rel="shortcut icon" href="/favicon.ico" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png" />
         <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png" />
-        <link rel="manifest" href="/site.webmanifest" />
+        <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png" />
+        
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-touch-icon.png" />
+        
+        <link rel="manifest" href="/manifest.webmanifest" />
         <link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#f3ebbd">
         <meta name="msapplication-TileColor" content="#f3ebbd">
         <meta name="msapplication-TileImage" content="/img/ico/mstile-144x144.png">
 
         <link rel="stylesheet" href="css/style.css" />
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164230422-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164230422-1');
+        </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
         <script src="js/luxon.min.js" defer></script>
         <script src="js/site.js" defer></script>
