--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         <meta name="msapplication-TileColor" content="#f3ebbd">
         <meta name="msapplication-TileImage" content="/img/ico/mstile-144x144.png">
 
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="css/site.css" />
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164230422-1"></script>
