Added local jquery.

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
         gtag('config', 'UA-164230422-1');
         </script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" defer></script>
+        <script src="js/jquery.min.js" defer></script>
         <script src="js/luxon.min.js" defer></script>
         <script src="js/site.js" defer></script>
         <script>
