--- a/public/index.html
+++ b/public/index.html
@@ -19,13 +19,12 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/favicon-16x16.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/favicon-32x32.png" />
-        
         <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-touch-icon.png" />
-        
-        <link rel="manifest" href="/manifest.webmanifest" />
         <link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#f3ebbd">
         <meta name="msapplication-TileColor" content="#f3ebbd">
         <meta name="msapplication-TileImage" content="/img/ico/mstile-144x144.png">
+
+        <link rel="manifest" href="/site.webmanifest" />
 
         <link rel="stylesheet" href="css/site.css" />
 
