Clean up for apple.

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,13 @@
         <title>Critter Forecast - ACNH</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Critter Forecast - Lists all currently available critters in Animal Crossing New Horizons!" />
+        <meta name="description" content="At a glance display of all critters currently available in Animal Crossing New Horizons!!" />
         <meta name="author" content="CatStarwind" />
         <meta name="theme-color" content="#f3ebbd" />
 
         <!-- Open Graph -->
-        <meta property="og:title" content="Critter Forecast - ACNH" />
-        <meta property="og:description" content="Critter Forecast - Lists all currently available critters in Animal Crossing New Horizons!" />
+        <meta property="og:title" content="Critter Forecast" />
+        <meta property="og:description" content="At a glance display of all critters currently available in Animal Crossing New Horizons!" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://critterforecast.com" />
         <meta property="og:image" content="https://critterforecast.com/img/logo.png" />
@@ -19,7 +19,7 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/logo-16.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/logo-32.png" />
-        <link rel="apple-touch-icon" href="/img/ico/apple-touch-icon.png" />
+        <link rel="apple-touch-icon" href="/img/logo.png" />
         <link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#f3ebbd">
         <meta name="msapplication-TileColor" content="#f3ebbd">
         <meta name="msapplication-TileImage" content="/img/ico/mstile-144x144.png">
@@ -87,9 +87,11 @@
                 </div>
                 <table>
                     <thead>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>Location</th>
+                        <tr>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Location</th>
+                        </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
@@ -104,10 +106,12 @@
                 </div>
                 <table>
                     <thead>
-                        <th>Name</th>
-                        <th>Price</th>
-                        <th>Location</th>
-                        <th title="Shadow Size">S</th>
+                        <tr>
+                            <th>Name</th>
+                            <th>Price</th>
+                            <th>Location</th>
+                            <th title="Shadow Size">S</th>
+                        </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
