--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Critter Forecast - ACNH</title>
+        <title>Critter Forecast - Animal Crossing New Horizons</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="description" content="At a glance display of all critters currently available in Animal Crossing New Horizons!!" />
@@ -65,7 +65,7 @@
     <body>
         <div class="dashboard">
             <div id="acClock">
-                <div class="time">04:00<span> AM</span></div>
+                <div class="time">00:00<span> AM</span></div>
                 <hr />
                 <div class="date">January 1 <span>Wed.</span></div>
             </div>
