Added link to Issues for feedback.

--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,6 @@
                 </table>
             </div>
         </div>
-        <div class="footer">&copy; 2020 - CatStarwind | Animal Crossing is property of Nintendo / Nook Inc.</div>
+        <div class="footer">&copy; 2020 - <a href="https://github.com/CatStarwind/CritterForecast/issues">CatStarwind</a> | Animal Crossing is property of Nintendo / Nook Inc.</div>
     </body>
     </html>
