Added checkbox column and toggle for said column.

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,10 @@
                 <hr />
                 <div class="date">January 1 <span>Wed.</span></div>
             </div>
+            <div id="catchToggle">
+                <div class="insect"></div>
+                <div class="fish"></div>
+            </div>
             <div class="legend">
                 <div class="lastchanceMonth"><span>Leaving this month.</span></div>
                 <div class="lastchanceTime"><span>Leaving this time block.</span></div>
@@ -88,6 +92,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th></th>
                             <th>Name</th>
                             <th>Price</th>
                             <th>Location</th>
@@ -107,6 +112,7 @@
                 <table>
                     <thead>
                         <tr>
+                            <th></th>
                             <th>Name</th>
                             <th>Price</th>
                             <th>Location</th>
