Fixed hemisphere switch.

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,7 @@
                 <hr />
                 <div class="date">January 1 <span>Wed.</span></div>
             </div>
+            <img id="hemisphere" src="/img/logo.png" />
             <div class="legend">
                 <div class="lastchanceMonth"><span>Leaving this month.</span></div>
                 <div class="lastchanceTime"><span>Leaving this time block.</span></div>
