--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,10 @@
         <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="16x16" href="/img/ico/logo-16.png" />
         <link rel="icon" type="image/png" sizes="32x32" href="/img/ico/logo-32.png" />
-        <link rel="apple-touch-icon" href="/img/logo.png" />
-        <link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#f3ebbd">
-        <meta name="msapplication-TileColor" content="#f3ebbd">
-        <meta name="msapplication-TileImage" content="/img/ico/mstile-144x144.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/img/ico/apple-touch-icon.png" />
+        <link rel="mask-icon" href="/img/ico/safari-pinned-tab.svg" color="#f7cc63" />
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="msapplication-TileImage" content="img/ico/mstile-144x144.png">
 
         <link rel="manifest" href="/site.webmanifest" />
 
